--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -45,5 +45,6 @@
     "noUncheckedSideEffectImports": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["src/**/__tests__/**/*"]
 }
