--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test:ct": "playwright test -c playwright-ct.config.ts"
   },
   "dependencies": {
     "react": "^19.2.0",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@playwright/experimental-ct-react": "^1.57.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
@@ -26,6 +28,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "jest": "^29.7.0",
+    "playwright": "^1.57.0",
     "sass-embedded": "^1.97.2",
     "ts-jest": "^29.4.6",
     "typescript": "~5.9.3",
